django-sitegate changelog
=========================


v1.0.0
------
! Dropped QA for Python 3.4.
* No functional changes. Celebrating 1.0.0.


v0.14.1
-------
* Fixed siteprefs dependency version.


v0.14.0
-------
+ Added SITEGATE_USE_SITEMESSAGE and SITEGATE_USE_SITEPREFS settings.
* Disabling flow now disables form POST alngside with form rendering.
* Now a proper version of siteprefs is preinstalled.


v0.13.0
-------
+ Added Bootstrap 4 templates.
+ Django 2.0 basic compatibility.
* Dropped support for Python<3.4 and Django<1.7.


v0.12.2
-------
* Django 1.11 compatibility improvements.


v0.12.1
-------
* Package distribution fix.


v0.12.0
-------
+ Added `repo` module with known anonymous mailer hosts.
* ModernSignup: maximum e-mail length is limited to maximum username length (see #2).


v0.11.0
-------
* Django 1.10 compatibility improvements.


v0.10.3
-------
* Fixed "Your models have changes that are not yet reflected in a migration" (see #19).
* Django 1.9 compatibility improvements.


v0.10.2
-------
* Fixed FieldError for custom user models without `username` field.


v0.10.1
-------
* Fixed `KeyError` on signup when username already exists.


v0.10.0
-------
+ Added Czech localization.
+ Added Django 1.7 migrations.


v0.9.0
------
+ Django 1.7 ready.
+ Now using new `get_message_type_for_app` from sitemessage.


v0.8.0
------
+ Email verification procedure support added to modern signup flows.
+ Implemented a fallback to Django built-in mailing system if sitemessages is not available.
+ Implemented support for custom User models without `username` field.


v0.7.0
------
+ Implemented experimental email verification procedure.


v0.6.1
------
* Fixed the issue with upper cased blacklisted emails.
* Fixed blacklisted domains detection mechanics.
* Fixed Bootstrap 3 sign in template.
* Fixed @redirect_signedin raising AttributeError (closes #7).


v0.6.0
------
+ Added Bootstrap 3 templates.
+ Added Polish localization (see #4).