@@ -1,6 +1,6 @@
 [tox]
-envlist = py{27}-django{17,18,19,110,111}
-          py{35,36}-django{18,19,110,111,200,210}
+envlist =
+    py{35,36}-django{18,19,110,111,200,210}
 
 install_command = pip install {opts} {packages}
 skip_missing_interpreters = True
